--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
       }, []);
 
       return (
-        <div className="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center" role="dialog" aria-modal="true" aria-labelledby="welcome-title">
+        <div className="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center" style={{ zIndex: 1001 }} role="dialog" aria-modal="true" aria-labelledby="welcome-title">
           <div className="card max-w-sm animate-fade-in">
             <h2 id="welcome-title" className="text-2xl font-bold mb-4">Welcome to CyberSafe Uni!</h2>
             <p className="mb-4">
