--- a/index.html
+++ b/index.html
@@ -686,12 +686,12 @@
       return (
         <HashRouter>
           <div className="min-h-screen flex flex-col">
-            <nav className="nav-bar flex justify-center" role="navigation">
-              <Link to="/" className="px-4" aria-label="Go to home page">Home</Link>
-              <Link to="/quiz" className="px-4" aria-label="Take the cybersecurity quiz">Quiz</Link>
-              <Link to="/practice" className="px-4" aria-label="Practice cybersecurity scenarios">Practice</Link>
-              <Link to="/learn" className="px-4" aria-label="Explore learning modules">Learn</Link>
-              <Link to="/survey" className="px-4" aria-label="Complete the evaluation survey">Survey</Link>
+            <nav className="nav-bar flex overflow-x-auto" role="navigation">
+              <Link to="/" className="px-2 sm:px-4 whitespace-nowrap" aria-label="Go to home page">Home</Link>
+              <Link to="/quiz" className="px-2 sm:px-4 whitespace-nowrap" aria-label="Take the cybersecurity quiz">Quiz</Link>
+              <Link to="/practice" className="px-2 sm:px-4 whitespace-nowrap" aria-label="Practice cybersecurity scenarios">Practice</Link>
+              <Link to="/learn" className="px-2 sm:px-4 whitespace-nowrap" aria-label="Explore learning modules">Learn</Link>
+              <Link to="/survey" className="px-2 sm:px-4 whitespace-nowrap" aria-label="Complete the evaluation survey">Survey</Link>
             </nav>
             <main className="max-w-5xl mx-auto p-6 flex-grow pt-16">
               <Switch>
