--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
       return (
         <HashRouter>
           <div className="min-h-screen flex flex-col">
-            <nav className="nav-bar flex overflow-x-auto" role="navigation">
+            <nav className="nav-bar flex overflow-x-auto sm:justify-center" role="navigation">
               <Link to="/" className="px-2 sm:px-4 whitespace-nowrap" aria-label="Go to home page">Home</Link>
               <Link to="/quiz" className="px-2 sm:px-4 whitespace-nowrap" aria-label="Take the cybersecurity quiz">Quiz</Link>
               <Link to="/practice" className="px-2 sm:px-4 whitespace-nowrap" aria-label="Practice cybersecurity scenarios">Practice</Link>
